<resources>
    <string name="app_name">TravelNotes</string>
    <string name="add_note">ADD NOTE</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name_note_1">Заметка 1</string>
    <string name="find">Find</string>
    <string name="send">Send</string>
    <string name="exit">Exit</string>
    <string name="about">About</string>
    <string name="name_app">Travel Note App</string>
    <string name="about_developers">Developer - Andrew Fisenko</string>
    <string name="version">V 1.03</string>
    <string name="drawer_header">Travel Notes</string>
    <string name="navigation_drawer_open">AAAAA</string>
    <string name="navigation_drawer_close">BBBBB</string>
    <string name="action_snackbar">OK</string>
    <string name="warning">Service unavailable</string>
    <string name="bye">Good bye!</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="are_you_sure">Are you sure?</string>
</resources>