<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/action_find"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/find"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_send"
        android:icon="@android:drawable/ic_menu_send"
        android:title="@string/send"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_about"
        android:title="@string/about"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_exit"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        android:title="@string/exit"
        app:showAsAction="always" />
</menu>